fixes overflow issue when about overlay is open.

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -7,6 +7,9 @@ body
   padding: 0 200px 0 180px
   font-family: 'Merriweather', serif
 
+  &.about-open
+    overflow: hidden
+
 ul
   list-style: none
   padding: 0
